# wavpack-rs

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
wavpack/: Cargo.toml  README.md
wavpack-sys/: Cargo.toml  README.md  build.rs  wrapper.h
wavpack-sys/src/: lib.rs
wavpack/examples/: simple.rs
wavpack/src/: error.rs  lib.rs  reader.rs  version.rs  writer.rs
wavpack/tests/: test.rs
