[package]
name = "wavpack-sys"
version = "0.1.0"
edition = "2018"
authors = ["Toru3 <ryuutet@gmail.com>"]
description = "C FFI binding of [WavPack](https://www.wavpack.com/)"
license = "BSD-3-Clause"
documentation = "https://docs.rs/wavpack-sys/"
repository = "https://gitlab.com/Toru3/wavpack-rs"
readme = "README.md"
keywords = ["WavPack", "audio", "encode", "decode", "ffi"]
categories = ["external-ffi-bindings", "multimedia::audio", "multimedia::encoding"]

[dependencies]

[build-dependencies]
bindgen = "0.59.1"
