[package]
name = "wavpack-sys"
version = "0.4.0"
edition = "2021"
authors = ["Ian Hobson <ian.r.hobson@gmail.com>", "Toru3 <ryuutet@gmail.com>"]
description = "FFI bindings for WavPack"
license = "BSD-3-Clause"
documentation = "https://docs.rs/wavpack-sys/"
repository = "https://gitlab.com/Toru3/wavpack-rs"
readme = "../README.md"
keywords = ["WavPack", "audio", "encode", "decode", "ffi"]
categories = [
  "external-ffi-bindings",
  "multimedia::audio",
  "multimedia::encoding",
]

[dependencies]

[build-dependencies]
bindgen = "0.69.0"
cmake = "0.1.45"
