[package]
name = "wavpack"
version = "0.2.2"
edition = "2018"
authors = ["Toru3 <ryuutet@gmail.com>"]
description = "API binding of WavPack"
license = "BSD-3-Clause"
documentation = "https://docs.rs/wavpack/"
repository = "https://gitlab.com/Toru3/wavpack-rs"
readme = "README.md"
keywords = ["WavPack", "audio", "encode", "decode"]
categories = ["api-bindings", "multimedia::audio", "multimedia::encoding"]

[dependencies]
thiserror = "1.0.29"
ffi = { package = "wavpack-sys", version = "0.1.1", path = "../wavpack-sys" }

[dev-dependencies]
anyhow = "1.0.43"
