[package]
name = "wavpack"
version = "0.3.0"
edition = "2021"
authors = ["Toru3 <ryuutet@gmail.com>"]
description = "API binding of WavPack"
license = "BSD-3-Clause"
documentation = "https://docs.rs/wavpack/"
repository = "https://gitlab.com/Toru3/wavpack-rs"
readme = "../README.md"
keywords = ["WavPack", "audio", "encode", "decode"]
categories = ["api-bindings", "multimedia::audio", "multimedia::encoding"]

[dependencies]
thiserror = "1.0.29"
wavpack-sys = { version = "0.1.4", path = "../wavpack-sys" }

[dev-dependencies]
anyhow = "1.0.43"
