[package]
name = "wavpack"
version = "0.4.0-alpha"
edition = "2021"
authors = ["Ian Hobson <ian.r.hobson@gmail.com>", "Toru3 <ryuutet@gmail.com>"]
description = "API bindings for WavPack"
license = "BSD-3-Clause"
documentation = "https://docs.rs/wavpack/"
repository = "https://github.com/irh/wavpack-rs"
readme = "../README.md"
keywords = ["WavPack", "audio", "encode", "decode"]
categories = ["api-bindings", "multimedia::audio", "multimedia::encoding"]

[dependencies]
thiserror = "1.0.29"
wavpack-sys = { version = "0.1.4", path = "../wavpack-sys" }

[dev-dependencies]
anyhow = "1.0.43"
